[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-utils"
version = "0.1.3"
authors = [
    { name="Simon Chila", email="simonchila47@gmail.com" },
]
description = "A rocket-themed utility for learning GitHub Packages"
readme = "README.md"
requires-python = ">=3.8"