[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-utils"
version = "0.1.10"
authors = [
    { name="Simonchila", email="simonchila47@gmail.com" },
]
description = "A rocket-themed utility for learning GitHub Packages"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/Simonchila/space-utils"